--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <br>
 <br>
 <center>
-	<a href="./resume.pdf">
+	<a href="./PREETHIKA BALAJI(5).pdf">
 		<button>
 		<center>RESUME</center></button>
 		</a>
