--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <center>
 	<a href="./PREETHIKA BALAJI(5).pdf">
 		<button>
-		<center>RESUME</center></button>
+		<center>PREETHIKA</center></button>
 		</a>
 </body>
 </html>
